# Gaussian-Belief-Propagation-Optimisation

./: .gitignore  CMakeLists.txt  README.md  vary_nodes.sh  vary_nodes_2.csv
include/: factor.h  factor_graph.h  gaussian.h  utils.h  variable.h
scripts/: vary_nodes.sh
src/: factor.cc  factor_graph.cc  main.cc  variable.cc
test/: CMakeLists.txt  unit_test.cc
